--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<title>Portfolio</title>
+		<title>Koushik Portfolio</title>
 	</head>
 	<body>
 		<header></header>
