fix: update details of project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header></header>
-		<main>Hi! I am Tanay</main>
+		<main>Hi! I am Koushik. I have worked on few CLI apps. I'll showcase them here.</main>
 		<footer></footer>
 		<script src="scripts.js"></script>
 	</body>
