Fix: Added Interests

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	</head>
 	<body>
 		<header></header>
-		<main>Hi! I am Koushik. I have worked on few CLI apps. I'll showcase them here.</main>
+		<main>
+			Hi! I am Koushik. I have worked on few CLI apps. I'll showcase them here.<br />
+			My Interests include Front End Development, Participating in Coding Contests.
+		</main>
 		<footer></footer>
 		<script src="scripts.js"></script>
 	</body>
