markOne,markTwo,markThree completed

--- a/index.html
+++ b/index.html
@@ -5,15 +5,61 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<title>Koushik Portfolio</title>
+		<title>Home | Koushik</title>
 	</head>
 	<body>
-		<header></header>
-		<main>
-			Hi! I am Koushik. I have worked on few CLI apps. I'll showcase them here.<br />
-			My Interests include Front End Development, Participating in Coding Contests.
-		</main>
-		<footer></footer>
+		<nav class="navigation container">
+			<div class="nav-brand">I AM DEVELOPER</div>
+			<ul class="list-non-bullet nav-pills">
+				<li class="list-item-inline link-active">
+					<a class="link link-active" href="/">HOME</a>
+				</li>
+				<li class="list-item-inline">
+					<a class="link" href="/projects.html">PROJECTS</a>
+				</li>
+				<li class="list-item-inline">
+					<a class="link" href="/blogs.html">BLOGS</a>
+				</li>
+			</ul>
+		</nav>
+		<header class="hero">
+			<img class="hero-img" src="/images/hero.svg" alt="Image not loaded" />
+			<h2 class="hero-heading">Koushik the <span class="heading-inverted">Web Developer</span></h2>
+		</header>
+		<section class="section ow">
+			<div class="container container-center">
+				<h1>Technologies</h1>
+				<p>I'm proficient in <strong>Java, JavaScript, NodeJS, ReactJS, HTML5, CSS3, Git</strong></p>
+			</div>
+		</section>
+		<section class="section">
+			<div class="container container-center">
+				<h1>Projects</h1>
+				<p>I would like to showcase my work, You can view my Projects hosted online.</p>
+				<a href="/" class="link link-primary">Browse Projects</a>
+			</div>
+		</section>
+		<section class="section ow">
+			<div class="container container-center">
+				<h1>Blogs</h1>
+				<p>I write Technical and Non-Technical blogs. Feel free to give them a read.</p>
+				<a href="/" class="link link-secondary">View Blogs</a>
+			</div>
+		</section>
+		<footer class="footer container">
+			<div class="footer-header">Connect with me on Social Media</div>
+			<ul class="social-link list-non-bullet">
+				<li class="list-item-inline">
+					<a class="link" href="https://github.com/koushikrp">Github </a>
+				</li>
+				<li class="list-item-inline">
+					<a class="link" href="https://www.linkedin.com/in/koushikrp/">LinkedIn </a>
+				</li>
+				<li class="list-item-inline">
+					<a class="link" href="https://twitter.com/koushikrp2">Twitter </a>
+				</li>
+			</ul>
+		</footer>
 		<script src="scripts.js"></script>
 	</body>
 </html>
