fix: added portfolio project

--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<nav class="navigation container">
-			<div class="nav-brand">I AM DEVELOPER</div>
+			<div class="nav-brand"><a class="link" href="/index.html">I AM DEVELOPER</a></div>
 			<ul class="list-non-bullet nav-pills">
 				<li class="list-item-inline">
 					<a class="link" href="/">HOME</a>
@@ -26,6 +26,21 @@
 			<img class="hero-img" src="/images/blogs_written.svg" alt="Image not loaded" />
 			<h2 class="hero-heading">My <span class="heading-inverted">Blogs</span></h2>
 		</header>
+
+		<footer class="footer container">
+			<div class="footer-header">Connect with me on Social Media</div>
+			<ul class="social-link list-non-bullet">
+				<li class="list-item-inline">
+					<a class="link" href="https://github.com/koushikrp">Github </a>
+				</li>
+				<li class="list-item-inline">
+					<a class="link" href="https://www.linkedin.com/in/koushikrp/">LinkedIn </a>
+				</li>
+				<li class="list-item-inline">
+					<a class="link" href="https://twitter.com/koushikrp2">Twitter </a>
+				</li>
+			</ul>
+		</footer>
 		<script src="scripts.js"></script>
 	</body>
 </html>
