--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<nav class="navigation container">
-			<div class="nav-brand">I AM DEVELOPER</div>
+			<div class="nav-brand"><a class="link" href="/index.html">I AM DEVELOPER</a></div>
 			<ul class="list-non-bullet nav-pills">
 				<li class="list-item-inline link-active">
 					<a class="link link-active" href="/">HOME</a>
@@ -24,7 +24,7 @@
 		</nav>
 		<header class="hero">
 			<img class="hero-img" src="/images/hero.svg" alt="Image not loaded" />
-			<h2 class="hero-heading">Koushik the <span class="heading-inverted">Web Developer</span></h2>
+			<h2 class="hero-heading">Koushik the <span class="heading-inverted">Software Developer</span></h2>
 		</header>
 		<section class="section ow">
 			<div class="container container-center">
@@ -36,14 +36,14 @@
 			<div class="container container-center">
 				<h1>Projects</h1>
 				<p>I would like to showcase my work, You can view my Projects hosted online.</p>
-				<a href="/" class="link link-primary">Browse Projects</a>
+				<a href="/projects.html" class="link link-primary">Browse Projects</a>
 			</div>
 		</section>
 		<section class="section ow">
 			<div class="container container-center">
 				<h1>Blogs</h1>
 				<p>I write Technical and Non-Technical blogs. Feel free to give them a read.</p>
-				<a href="/" class="link link-secondary">View Blogs</a>
+				<a href="/blogs.html" class="link link-secondary">View Blogs</a>
 			</div>
 		</section>
 		<footer class="footer container">
