--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<nav class="navigation container">
-			<div class="nav-brand">I AM DEVELOPER</div>
+			<div class="nav-brand"><a class="link" href="/index.html">I AM DEVELOPER</a></div>
 			<ul class="list-non-bullet nav-pills">
 				<li class="list-item-inline">
 					<a class="link" href="/">HOME</a>
@@ -29,6 +29,17 @@
 		</header>
 
 		<ul class="list-non-bullet">
+			<li class="margin-md">
+				<div class="container container-center">
+					<h1>Personal Portfolio</h1>
+					<small>October, 2021 | markThree, markFour, markFive</small>
+					<p>Personal Website with Skills, Projects and Blogs built with HTML,CSS.</p>
+					<a class="link link-primary" href="https://koushikr-portfolio.netlify.app/">Live Project</a>
+					<a class="link link-secondary" href="https://github.com/koushikrp/neogcamp-portfolio-site"
+						>View Source</a
+					>
+				</div>
+			</li>
 			<li class="margin-md">
 				<div class="container container-center">
 					<h1>Are you a Fan of Technology and Computers</h1>
@@ -52,8 +63,8 @@
 					<h1>How well do you know India?</h1>
 					<small>October, 2021 | markOne</small>
 					<p>
-						A Command Line Interface Application built with <strong>nodeJS</strong>. You can share this on
-						your social media and find out how many people know about India.
+						A Command Line Interface Application built with <strong>nodeJS</strong>. It will test your
+						General Knowledge about India.
 					</p>
 					<a
 						class="link link-primary"
