feat: added two blogs

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,10 @@
 					<small>October, 2021 | markThree, markFour, markFive</small>
 					<p>Personal Website with Skills, Projects and Blogs built with HTML,CSS.</p>
 					<a class="link link-primary" href="https://koushikr-portfolio.netlify.app/">Live Project</a>
-					<a class="link link-secondary" href="https://github.com/koushikrp/neogcamp-portfolio-site"
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/neogcamp-portfolio-site"
 						>View Source</a
 					>
 				</div>
@@ -53,7 +56,10 @@
 						href="https://replit.com/@koushikrp/Are-you-a-Fan-of-Technology?embed=1&output=1#index.js"
 						>Live Project</a
 					>
-					<a class="link link-secondary" href="https://github.com/koushikrp/neogcamp-cli-project-2"
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/neogcamp-cli-project-2"
 						>View Source</a
 					>
 				</div>
@@ -71,7 +77,10 @@
 						href="https://replit.com/@koushikrp/How-well-do-you-know-India?embed=1&output=1#index.js"
 						>Live Project</a
 					>
-					<a class="link link-secondary" href="https://github.com/koushikrp/neogcamp-CLI-project-1"
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/neogcamp-CLI-project-1"
 						>View Source</a
 					>
 				</div>
