--- a/blogs.html
+++ b/blogs.html
@@ -27,6 +27,30 @@
 			<h2 class="hero-heading">My <span class="heading-inverted">Blogs</span></h2>
 		</header>
 
+		<ul class="list-non-bullet">
+			<li class="margin-md">
+				<div class="container container-center">
+					<h1>A New AI powered Open Source Photo Editor for refining precise details</h1>
+					<small>August, 2021</small>
+					<p>
+						Recent AI powered Photo Editors are making Photoshop redundant. You will be baffled by the
+						Results Produced by these Computationally efficient Editors. One such Editor is ..
+					</p>
+					<a href="/blogread1.html" class="link link-primary">Read More..</a>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
+					<h1>What is the Potential of Blockchain and why should we acknowledge it?</h1>
+					<small>August, 2021</small>
+					<p>
+						While we can already do payments and contracts perfectly, why should we take an enormous step to
+						change the system entirely?
+					</p>
+					<a href="/blogread2.html" class="link link-primary">Read More..</a>
+				</div>
+			</li>
+		</ul>
 		<footer class="footer container">
 			<div class="footer-header">Connect with me on Social Media</div>
 			<ul class="social-link list-non-bullet">
