fix: small changes

--- a/blogread1.html
+++ b/blogread1.html
@@ -26,6 +26,10 @@
 			<div class="container container-center">
 				<h1>An AI powered Open Source Photo Editor for refining precise details</h1>
 				<small style="display: block; text-align: center">August, 2021</small>
+				<small style="display: block; text-align: center"
+					>* Studied about the research paper and explained my understanding with points from the
+					paper.</small
+				>
 				<p>
 					Recent AI powered Photo Editors are making Photoshop redundant. You will be baffled by the Results
 					Produced by these Computationally efficient Editors. One such Editor is
@@ -36,9 +40,13 @@
 					<a target="_blank" href="https://github.com/zengxianyu/sketchedit">SketchEdit</a>
 				</p>
 				<p>
-					Unlike other existing methods that usually require users to draw an extra mask indicating the region
-					to modify, this new paradigm of sketch-based image manipulation "only requires sketch inputs from
-					users and utilizes the entire original image"
+					Different from other existing methods used in popular photo editors, that usually require users to
+					draw an extra mask indicating the region to modify, this new paradigm of sketch-based image
+					manipulation
+					<strong
+						>only requires sketch inputs from users, utilizes the entire original image and gives the
+						result.</strong
+					>.
 				</p>
 				<p>
 					One of the Outputs:
@@ -48,12 +56,12 @@
 					<img src="/images/face_gif.gif" alt="Result is loading." width="400" />
 				</div>
 				<p>
-					"Given an image and sketch, our model automatically predicts the target modification region and
-					encodes it into a structure agnostic style vector," states the team. "A generator then synthesizes
-					the new image content based on the style vector and sketch. The manipulated image is finally
-					produced by blending the generator output into the modification region of the original image. Our
-					model can be trained in a self-supervised fashion by learning the reconstruction of an image region
-					from the style vector and sketch."
+					If we give an image and sketch, this Deep learning model automatically guesses the required target
+					modification area and encodes it into a style vector which is formed in a structure independent way.
+					Now the Generator creates the new content of the image based on the sketch and style vector. This
+					manipulated image is finally produced by mixing the generator output into the modification area of
+					the original image. This model is then trained in a supervised learning way by focusing the
+					reconstruction of an image area from the sketch and style vector.
 				</p>
 			</div>
 			<hr />
@@ -61,20 +69,22 @@
 		<section class="section">
 			<div class="container container-center">
 				<h1 style="text-align: left">About Previous Approach</h1>
-				Previously, another approach was discovered, called LaMa, that can be used to remove various objects
-				from pictures like people, furniture, buildings, animals, not-needed details, etc. The network then
-				recreates the background behind the deleted objects and achieves excellent performance even in
-				challenging scenarios, e.g. completion of periodic structures.
+				Before few months, another approach was discovered, called LaMa, that can be used to remove various
+				objects from pictures like Trees, Animals, People, Houses,Signs, other miniature details etc. The
+				network then regenerates the background behind the deleted objects and achieves excellent accuracy and
+				performance even in challenging scenarios. Ex: Completion of periodic structures.
 			</div>
 			<hr />
 			<div class="container container-center">
 				<h1 style="text-align: left">Final Words</h1>
 				<p>
-					AI-based software has certainly changed photo editing – though this comes with both advantages and
-					disadvantages. Such software can definitely save time, but it can also negatively affect creativity.
-					Still, the best thing about most of today’s photo editing programs is that you can choose whether to
-					use AI, depending on your preferences at any given time. So feel free to try out some of the latest
-					software, and don’t be afraid to experiment!
+					AI-based software has certainly disrupted photo editing. But, this comes with both advantages and
+					disadvantages. Such intelligent software can save enormous amount of time, but it can also
+					negatively affect originality and imagination. Still, the best thing about most of today’s photo
+					editing programs is that you can choose whether to use AI, depending on your preferences at any
+					given time. So be active in trying out the latest software, and keep experimenting! Till we achieve
+					Artificial General Intelligence (AGI), this experimenting continues and we will keep producing
+					astonishing results.
 				</p>
 			</div>
 		</section>
