--- a/blogread2.html
+++ b/blogread2.html
@@ -26,63 +26,71 @@
 			<div class="container container-center">
 				<h1>What is the Potential of Blockchain and why should we acknowledge it?</h1>
 				<small style="display: block; text-align: center">August, 2021</small>
+				<small style="display: block; text-align: center"
+					>* Explained about Blockchain using understanding from online resources in layman terms.</small
+				>
 			</div>
 		</section>
 		<section class="section">
 			<div class="container container-center">
 				<h1 style="text-align: left">What is Blockchain?</h1>
 				<p>
-					Blockchain technology is simply a clever way to get many different persons to create one common
-					version of something when doing things on the internet. Single versions of things are important for
-					uses like finding out if Ram paid Hari and only Hari for that Pen (and whether he didn’t copy his
-					money and also pay someone else).
+					Blockchain technology, in simple words, is an innovative way to get many different persons/investors
+					to create one common version of something leveraging the power of internet. Single versions of
+					things are important for uses like finding out if Ram paid Hari and only Hari for that Pen (and
+					whether he didn’t copy his money and also pay someone else).
 				</p>
 				<hr />
-				<h1 style="text-align: left">Why is it valuable?</h1>
+				<h1 style="text-align: left">Why is it invaluable?</h1>
 				<p>
-					Surprisingly in the pre-blockchain world, there was no way to get multiple persons to create
-					something singular, and so we would usually have to put our trust in one person or representative
-					(e.g. a bank) to create and maintain the singular versions of things we needed. Trusting one
-					representative is costly as they can then charge us money to do things at prices that may not be
-					fair. They can also manipulate the thing that we’ve entrusted them with to suit their whims and
-					fancies, potentially in a way that hurts everyone else. This old way of doing things is also very
+					Actually before blockchain, there was no way to get multiple persons to create something in a unique
+					way, and so we would usually have to put our trust in one person or a centralized entity (e.g. a
+					bank) to create and maintain the unique versions of things we needed. Trusting one centralized
+					organization is very costly as they can then charge us money to do things at prices that may not be
+					fair. They can also manipulate the thing that we’ve trusted them with to suit their dreams and
+					goals, potentially in a way that hurts everyone else. This old way of doing things is also very
 					inefficient since different groups of people would choose different representatives to maintain
-					singular versions of the things important to them, making it very difficult to interact between
+					unique versions of the things important to them, making it very hard to interact between different
 					groups.
 				</p>
 				<hr />
 			</div>
 			<div class="container container-center">
 				<p>
-					When you send 100 Rs. to your friend in Hyderabad, paytm isn't literally putting a 100 Rs. on a
-					plane. When you “received the money” it doesn’t mean there’s cash that got out of the plane and was
-					just deposited into a metal box with your name on it.
+					When you send Rs.50 using Paytm to your friend in Hyderabad, Paytm isn't literally putting that
+					Rs.50 on an airplane. When you <i>received</i> the money it doesn’t mean that the cash just came out
+					in an airplane and was just deposited into a safe box with your name on it.
 				</p>
 				<p>
-					When somebody “trades stocks” the stock exchange isn't moving paper stock certificates and your bank
-					isn't physically moving paper bills -- all they really are, are giant digital LEDGERS -- moving
-					digital numbers around from one account to the other.
+					When someone <strong>trades stocks using any software</strong>, the stock exchange is not using
+					paper stock certificates for the transactions and your bank isn't physically moving paper
+					bills/receipts. All they really are, are giant digital <strong>LEDGERS</strong> moving digital
+					numbers(unique numbers) around from one account to the other in a secure way.
 				</p>
 				<p>
-					So your money, stocks, even identity are just information in ledgers. Data. Does it really matter if
-					a stock certificate is blue or green or 1 inch larger? The container of the data (colored pieces of
-					paper, certificates) doesn’t matter. It’s what’s being contained that matters (value, ownership,
-					identity) and those are things that exist in the mind. And those things are recorded in our record
-					books.
+					Hence all your money, stocks and even identity are just information in ledgers i.e.
+					<strong>Data</strong>. Does it really matter if a stock certificate is grey or red or 1 inch larger?
+					The container of the data (like money certificates, bonds, other paper work) doesn’t matter. What
+					matters is that, which is being contained. Value, Identity and Ownership are those are things that
+					exist in the mind. And those things are recorded in our record books(offline ledgers).
 				</p>
 				<p>
-					Traditionally, you had to have a central authority preside over a record book. How else would you do
-					it? An accountant cannot give free access to his books. If everyone had full access to it, I’d just
-					add 5 crores to my balance and retire (although someone else could then take it away from me).
+					Conventionally, you would have had a central authority moderating a record book. In what other way
+					would you do it? An accountant cannot freely share his books to everyone. If everyone had full
+					access to it, I would just add 5 crores to my balance and retire (although someone else could then
+					take it away from me).
 				</p>
 				<hr />
 				<h1 style="text-align: left">Final Words</h1>
 				<p>
-					So we have institutions by necessity. The paytm ledger lives in a paytm computer. The bank ledger
-					lives in a bank computer. That ledger is updated, secured and managed centrally. We trust these
-					institutions to keep the integrity of the ledger. Now what happens when you have a magic ledger
-					where there’s no central authority, but by some magic (== blockchain) we still know that the
-					transactions have 100% integrity? Nobody can cheat the system.
+					So we have presiding institutions(central entities) by necessity. The paytm ledger is stored in a
+					paytm server and lives in the paytm network. The bank ledger lives in a bank computer in a remote
+					location. That ledger is always updated, secured and perfectly managed centrally. We trust these
+					organizations to keep the integrity of the ledger. Now when there is no central authority, by some
+					magic technology (blockchain), we can still have 100%
+					<strong>Integrity</strong>. Nobody can cheat the system. So, investing in such technology at the
+					expense of changing the entire ecosystem seems to be a right choice. It may be slow pace now, but it
+					will accelerate.
 				</p>
 			</div>
 		</section>
