--- a/blogs.html
+++ b/blogs.html
@@ -31,7 +31,7 @@
 			<li class="margin-md">
 				<div class="container container-center">
 					<h1>A New AI powered Open Source Photo Editor for refining precise details</h1>
-					<small>August, 2021</small>
+					<small>August, 2021 | My understanding of the Research Paper</small>
 					<p>
 						Recent AI powered Photo Editors are making Photoshop redundant. You will be baffled by the
 						Results Produced by these Computationally efficient Editors. One such Editor is ..
@@ -42,7 +42,7 @@
 			<li class="margin-md">
 				<div class="container container-center">
 					<h1>What is the Potential of Blockchain and why should we acknowledge it?</h1>
-					<small>August, 2021</small>
+					<small>August, 2021 | Explained what I learned from online resources in layman language.</small>
 					<p>
 						While we can already do payments and contracts perfectly, why should we take an enormous step to
 						change the system entirely?
