Feat: Added task 6 - Banana Translator

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,22 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>Minion Speak - A Translation app</h1>
+					<small>October, 2021 | markSix</small>
+					<p>
+						Web App that translates English sentences into Minion Language using <i>Vanilla JavaScript</i>
+					</p>
+					<a class="link link-primary" href="https://banana-talk-ngcamp.netlify.app/">Live Project</a>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/neogcamp-banana-speak"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Personal Portfolio</h1>
 					<small>October, 2021 | markThree, markFour, markFive</small>
 					<p>Personal Website with Skills, Projects and Blogs built with HTML,CSS.</p>
