--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,23 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>English - Morse Code Translator</h1>
+					<small>October, 2021 | markSix</small>
+					<p>
+						Web App that translates English sentences to corresponding Morse Code using
+						<i>Vanilla JavaScript</i>
+					</p>
+					<a class="link link-primary" href="https://morse-translator-neogcamp.netlify.app/">Live Project</a>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/neogcamp-morsecode-translator"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Minion Speak - A Translation app</h1>
 					<small>October, 2021 | markSix</small>
 					<p>
