docs: small change

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
-					<h1>English - Morse Code Translator</h1>
+					<h1>English to Morse Code Translator</h1>
 					<small>October, 2021 | markSeven</small>
 					<p>
 						Web App that translates English sentences to corresponding Morse Code using
