--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,23 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>Sport Interpreter</h1>
+					<small>November, 2021 | markEight</small>
+					<p>
+						Web App that Interprets the Entered Sport Emoji and also shows the name of the Emoji when it is clicked. Created using
+						<i>ReactJS, CSS, HTML</i>
+					</p>
+					<a class="link link-primary" href="https://sport-interpreter-neogcamp.netlify.app/">Live Project</a>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/Sport-Interpreter"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>English to Morse Code Translator</h1>
 					<small>October, 2021 | markSeven</small>
 					<p>
