--- a/projects.html
+++ b/projects.html
@@ -31,17 +31,33 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
-					<h1>Sport Interpreter</h1>
-					<small>November, 2021 | markEight</small>
+					<h1>Best Tourist Destinations</h1>
+					<small>November, 2021 | markNine</small>
 					<p>
-						Web App that Interprets the Entered Sport Emoji and also shows the name of the Emoji when it is clicked. Created using
+						Web App that shows details about the Top 5 Best Tourist Attractions of each Continent when the
+						button is clicked. Created using
 						<i>ReactJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://sport-interpreter-neogcamp.netlify.app/">Live Project</a>
+					<a class="link link-primary" href="https://best-tourist-destinations.netlify.app/">Live Project</a>
 					<a
 						target="_blank"
 						class="link link-secondary"
-						href="https://github.com/koushikrp/Sport-Interpreter"
+						href="https://github.com/koushikrp/best-tourist-destinations"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
+					<h1>Sport Interpreter</h1>
+					<small>November, 2021 | markEight</small>
+					<p>
+						Web App that Interprets the Entered Sport Emoji and also shows the name of the Emoji when it is
+						clicked. Created using
+						<i>ReactJS, CSS, HTML</i>
+					</p>
+					<a class="link link-primary" href="https://sport-interpreter-neogcamp.netlify.app/">Live Project</a>
+					<a target="_blank" class="link link-secondary" href="https://github.com/koushikrp/Sport-Interpreter"
 						>View Source</a
 					>
 				</div>
