--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,24 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>Cash Register Manager</h1>
+					<small>November, 2021 | markNine</small>
+					<p>
+						Web App that displays the Least Number of Notes to be returned, given a Bill, Cash Paid. Created
+						using
+						<i>VanillaJS, CSS, HTML</i>
+					</p>
+					<a class="link link-primary" href="https://cash-registr-managr.netlify.app/">Live Project</a>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/Cash-Register-Manager"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Best Tourist Destinations</h1>
 					<small>November, 2021 | markNine</small>
 					<p>
