--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,23 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1></h1>
+					<small>November, 2021 | markEleven</small>
+					<p>
+						Web App that displays whether the Entered Birthday is Lucky w.r.t the lucky number entered.
+						Created using
+						<i>VanillaJS, CSS, HTML</i>
+					</p>
+					<a class="link link-primary" href="https://lucky-birtday.netlify.app/">Live Project</a>
+					<a target="_blank" class="link link-secondary" href="https://github.com/koushikrp/Lucky-Birthday"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Cash Register Manager</h1>
-					<small>November, 2021 | markNine</small>
+					<small>November, 2021 | markTen</small>
 					<p>
 						Web App that displays the Least Number of Notes to be returned, given a Bill, Cash Paid. Created
 						using
