--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
-					<h1></h1>
+					<h1>Is Your Birthday Lucky?</h1>
 					<small>November, 2021 | markEleven</small>
 					<p>
 						Web App that displays whether the Entered Birthday is Lucky w.r.t the lucky number entered.
