--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,24 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>Fun With Triangles</h1>
+					<small>November, 2021 | markEleven</small>
+					<p>
+						Web App that tests your Knowledge about Triangles with Quizzes and also Outputs Area,Hypotenuse
+						of Triangles. Created using
+						<i>VanillaJS, CSS, HTML</i>
+					</p>
+					<a class="link link-primary" href="https://triangle-fun-netlify.netlify.app/">Live Project</a>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/Fun-With-Triangles"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Is Your Birthday Lucky?</h1>
 					<small>November, 2021 | markEleven</small>
 					<p>
