--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,26 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>Palindrome Birthday!</h1>
+					<small>December, 2021 | markThirteen</small>
+					<p>
+						Web App that tells If Your Birthdate is a Palindrome or not. It checks for all possible Date
+						Formats. Created using
+						<i>VanillaJS, CSS, HTML</i>
+					</p>
+					<a class="link link-primary" href="https://palindromicbirthday-neogcamp.netlify.app/"
+						>Live Project</a
+					>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/Palindrome-Birthday"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Fun With Triangles</h1>
 					<small>November, 2021 | markTwelve</small>
 					<p>
