[fix] added open in new tab feature for all the external links

--- a/index.html
+++ b/index.html
@@ -50,13 +50,19 @@
 			<div class="footer-header">Connect with me on Social Media</div>
 			<ul class="social-link list-non-bullet">
 				<li class="list-item-inline">
-					<a class="link" href="https://github.com/koushikrp">Github </a>
+					<a class="link" target="_blank" href="https://github.com/koushikrp"
+						><img class="logo" src="/images/github.svg" alt=""
+					/></a>
 				</li>
 				<li class="list-item-inline">
-					<a class="link" href="https://www.linkedin.com/in/koushikrp/">LinkedIn </a>
+					<a class="link" target="_blank" href="https://www.linkedin.com/in/koushikrp/"
+						><img class="logo" src="/images/linkedin.svg" alt=""
+					/></a>
 				</li>
 				<li class="list-item-inline">
-					<a class="link" href="https://twitter.com/koushikrp2">Twitter </a>
+					<a class="link" target="_blank" href="https://twitter.com/koushikrp2"
+						><img class="logo" src="/images/twitter.svg" alt=""
+					/></a>
 				</li>
 			</ul>
 		</footer>
