--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,29 @@
 		<ul class="list-non-bullet">
 			<li class="margin-md">
 				<div class="container container-center">
+					<h1>Stocks Profit/Loss Calculator</h1>
+					<small>December, 2021 | markFourteen</small>
+					<p>
+						Web App that Outputs the Profit/Loss obtained by Buying a Stock in certain quantity before some
+						time and Selling it now. Created using
+						<i>VanillaJS, CSS, HTML</i>
+					</p>
+					<a
+						class="link link-primary"
+						target="_blank"
+						href="https://stock-profit-loss-calculator-neogcamp.netlify.app/"
+						>Live Project</a
+					>
+					<a
+						target="_blank"
+						class="link link-secondary"
+						href="https://github.com/koushikrp/stock-profit-loss-calculator"
+						>View Source</a
+					>
+				</div>
+			</li>
+			<li class="margin-md">
+				<div class="container container-center">
 					<h1>Palindrome Birthday!</h1>
 					<small>December, 2021 | markThirteen</small>
 					<p>
@@ -38,7 +61,10 @@
 						Formats. Created using
 						<i>VanillaJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://palindromicbirthday-neogcamp.netlify.app/"
+					<a
+						class="link link-primary"
+						target="_blank"
+						href="https://palindromicbirthday-neogcamp.netlify.app/"
 						>Live Project</a
 					>
 					<a
@@ -58,7 +84,9 @@
 						of Triangles. Created using
 						<i>VanillaJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://triangle-fun-netlify.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://triangle-fun-netlify.netlify.app/"
+						>Live Project</a
+					>
 					<a
 						target="_blank"
 						class="link link-secondary"
@@ -76,7 +104,9 @@
 						Created using
 						<i>VanillaJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://lucky-birtday.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://lucky-birtday.netlify.app/"
+						>Live Project</a
+					>
 					<a target="_blank" class="link link-secondary" href="https://github.com/koushikrp/Lucky-Birthday"
 						>View Source</a
 					>
@@ -91,7 +121,9 @@
 						using
 						<i>VanillaJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://cash-registr-managr.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://cash-registr-managr.netlify.app/"
+						>Live Project</a
+					>
 					<a
 						target="_blank"
 						class="link link-secondary"
@@ -109,7 +141,9 @@
 						button is clicked. Created using
 						<i>ReactJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://best-tourist-destinations.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://best-tourist-destinations.netlify.app/"
+						>Live Project</a
+					>
 					<a
 						target="_blank"
 						class="link link-secondary"
@@ -127,7 +161,9 @@
 						clicked. Created using
 						<i>ReactJS, CSS, HTML</i>
 					</p>
-					<a class="link link-primary" href="https://sport-interpreter-neogcamp.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://sport-interpreter-neogcamp.netlify.app/"
+						>Live Project</a
+					>
 					<a target="_blank" class="link link-secondary" href="https://github.com/koushikrp/Sport-Interpreter"
 						>View Source</a
 					>
@@ -141,7 +177,9 @@
 						Web App that translates English sentences to corresponding Morse Code using
 						<i>Vanilla JavaScript</i>
 					</p>
-					<a class="link link-primary" href="https://morse-translator-neogcamp.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://morse-translator-neogcamp.netlify.app/"
+						>Live Project</a
+					>
 					<a
 						target="_blank"
 						class="link link-secondary"
@@ -157,7 +195,9 @@
 					<p>
 						Web App that translates English sentences into Minion Language using <i>Vanilla JavaScript</i>
 					</p>
-					<a class="link link-primary" href="https://banana-talk-ngcamp.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://banana-talk-ngcamp.netlify.app/"
+						>Live Project</a
+					>
 					<a
 						target="_blank"
 						class="link link-secondary"
@@ -171,7 +211,9 @@
 					<h1>Personal Portfolio</h1>
 					<small>October, 2021 | markThree, markFour, markFive</small>
 					<p>Personal Website with Skills, Projects and Blogs built with HTML,CSS.</p>
-					<a class="link link-primary" href="https://koushikr-portfolio.netlify.app/">Live Project</a>
+					<a class="link link-primary" target="_blank" href="https://koushikr-portfolio.netlify.app/"
+						>Live Project</a
+					>
 					<a
 						target="_blank"
 						class="link link-secondary"
@@ -190,6 +232,7 @@
 					</p>
 					<a
 						class="link link-primary"
+						target="_blank"
 						href="https://replit.com/@koushikrp/Are-you-a-Fan-of-Technology?embed=1&output=1#index.js"
 						>Live Project</a
 					>
@@ -211,6 +254,7 @@
 					</p>
 					<a
 						class="link link-primary"
+						target="_blank"
 						href="https://replit.com/@koushikrp/How-well-do-you-know-India?embed=1&output=1#index.js"
 						>Live Project</a
 					>
@@ -228,13 +272,19 @@
 			<div class="footer-header">Connect with me on Social Media</div>
 			<ul class="social-link list-non-bullet">
 				<li class="list-item-inline">
-					<a class="link" href="https://github.com/koushikrp">Github </a>
+					<a class="link" target="_blank" href="https://github.com/koushikrp"
+						><img class="logo" src="/images/github.svg" alt=""
+					/></a>
 				</li>
 				<li class="list-item-inline">
-					<a class="link" href="https://www.linkedin.com/in/koushikrp/">LinkedIn </a>
+					<a class="link" target="_blank" href="https://www.linkedin.com/in/koushikrp/"
+						><img class="logo" src="/images/linkedin.svg" alt=""
+					/></a>
 				</li>
 				<li class="list-item-inline">
-					<a class="link" href="https://twitter.com/koushikrp2">Twitter </a>
+					<a class="link" target="_blank" href="https://twitter.com/koushikrp2"
+						><img class="logo" src="/images/twitter.svg" alt=""
+					/></a>
 				</li>
 			</ul>
 		</footer>
